--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.41"
 petgraph = "0.6.0"
 rlua = "0.17.1"
+structopt = { version = "0.3.21", default-features = false }
+thiserror = "1.0.25"
