--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.41"
+lazy_static = "1.4.0"
 petgraph = "0.6.0"
 rlua = "0.17.1"
 structopt = { version = "0.3.21", default-features = false }
