--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ lazy_static = "1.4.0"
 petgraph = "0.6.0"
 rlua = "0.17.1"
 structopt = { version = "0.3.21", default-features = false }
+tempfile = "3.2.0"
 thiserror = "1.0.25"
