--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,12 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.41"
 lazy_static = "1.4.0"
+nix = "0.23.0"
 petgraph = "0.6.0"
 rlua = "0.17.1"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_json = "1.0.68"
 structopt = { version = "0.3.21", default-features = false }
 tempfile = "3.2.0"
+tera = "1.13.0"
 thiserror = "1.0.25"
