--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ petgraph = "0.6.0"
 rlua = "0.17.1"
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
+sha2 = "0.9.8"
 structopt = { version = "0.3.21", default-features = false }
 tempfile = "3.2.0"
 tera = "1.13.0"
