--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.41"
+flate2 = "1.0.22"
 lazy_static = "1.4.0"
 nix = "0.23.0"
 petgraph = "0.6.0"
@@ -16,7 +17,9 @@ serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 sha2 = "0.9.8"
 structopt = { version = "0.3.21", default-features = false }
+tar = "0.4.38"
 tempfile = "3.2.0"
 tera = "1.13.0"
 thiserror = "1.0.25"
 url = "2.2.2"
+zip = "0.5.13"
