--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,7 @@
 linker = "aarch64-linux-gnu-gcc"
 [target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-musl-gcc"
+[target.arm-unknown-linux-musleabihf]
+linker = "armv6-linux-musleabihf-gcc"
+[target.arm-unknown-linux-gnueabihf]
+linker = "arm-linux-gnueabihf-gcc"
