--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,6 +2,8 @@
 linker = "aarch64-linux-gnu-gcc"
 [target.aarch64-unknown-linux-musl]
 linker = "aarch64-linux-musl-gcc"
+[target.armv7-unknown-linux-musleabihf]
+linker = "arm-linux-musleabihf-gcc"
 [target.arm-unknown-linux-musleabihf]
 linker = "armv6-linux-musleabihf-gcc"
 [target.arm-unknown-linux-gnueabihf]
