--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ tar = "0.4.38"
 tempfile = "3.3.0"
 tera = "1.16.0"
 thiserror = "1.0.31"
+thread_local = "1.1.4"
+regex = "1.5.5"
 url = "2.2.2"
 zbus = "2.3.1"
 zip = "0.6.2"
