--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,6 @@ url = "2.3.1"
 zbus = "3.7.0"
 zip = "0.6.3"
 mlua = { version = "0.9.1", features = ["lua54", "mlua_derive", "vendored", "macros"] }
+tokio = { version = "1.32.0", features = ["full"] }
+indicatif = { version = "0.17.7", features = ["tokio", "improved_unicode"] }
+console = "0.15.7"
