--- a/hpg-remote/Cargo.toml
+++ b/hpg-remote/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.68"
-structopt = { version = "0.3.26", default-features = false }
 tokio = { version = "1.32.0", features = ["full"] }
 indicatif = { version = "0.17.7", features = ["improved_unicode"] }
 console = "0.15.7"
@@ -25,3 +24,5 @@ pin-project = "1.1.3"
 librsync = "0.2.3"
 tokio-util = { version = "0.7.10", features = ["codec"] }
 futures-util = "0.3.29"
+clap = { version = "4.4.11", features = ["derive"] }
+shell-escape = "0.1.5"
