--- a/hpg/Cargo.toml
+++ b/hpg/Cargo.toml
@@ -15,7 +15,6 @@ reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking", "json"], 
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 sha2 = "0.10.6"
-structopt = { version = "0.3.26", default-features = false }
 tar = "0.4.38"
 tempfile = "3.3.0"
 tera = "1.17.1"
@@ -29,3 +28,4 @@ mlua = { version = "0.9.1", features = ["lua54", "mlua_derive", "vendored", "mac
 tokio = { version = "1.32.0", features = ["full"] }
 indicatif = { version = "0.17.7", features = ["improved_unicode"] }
 console = "0.15.7"
+clap = { version = "4.4.11", features = ["derive"] }
