--- a/hpg/Cargo.toml
+++ b/hpg/Cargo.toml
@@ -41,3 +41,4 @@ tokio-util = { version = "0.7.10", features = ["codec"] }
 futures-util = "0.3.29"
 async-trait = "0.1.74"
 dirs-next = "2.0.0"
+pin-project = "1.1.3"
