--- a/hpg/Cargo.toml
+++ b/hpg/Cargo.toml
@@ -30,8 +30,8 @@ indicatif = { version = "0.17.7", features = ["improved_unicode"] }
 console = "0.15.7"
 clap = { version = "4.4.11", features = ["derive"] }
 ignore = "0.4.21"
-russh = "0.40.2"
-russh-keys = "0.40.1"
+russh = { version = "0.40.2", features = ["vendored-openssl"] }
+russh-keys = { version = "0.40.1", features = ["vendored-openssl"] }
 russh-config = "0.7.1"
 ciborium = "0.2.1"
 serde_yaml = "0.9.27"
