--- a/hpg/Cargo.toml
+++ b/hpg/Cargo.toml
@@ -18,7 +18,7 @@ sha2 = "0.10.6"
 tar = "0.4.38"
 tempfile = "3.3.0"
 tera = "1.17.1"
-thiserror = "1.0.38"
+thiserror = "1.0.51"
 thread_local = "1.1.4"
 regex = "1.7.1"
 url = "2.3.1"
@@ -42,3 +42,4 @@ futures-util = "0.3.29"
 async-trait = "0.1.74"
 dirs-next = "2.0.0"
 pin-project = "1.1.3"
+bytes = "1.5.0"
