--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,4 @@ dirs-next = "2.0.0"
 pin-project = "1.1.3"
 bytes = "1.5.0"
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
+rustix = "0.38.19" # Added for dependabot
