--- a/Cross.toml
+++ b/Cross.toml
@@ -1,3 +1,9 @@
 [target.armv7-unknown-linux-musleabihf]
 image = "hpg/armv7:latest"
 
+[target.aarch64-unknown-linux-gnu]
+# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
+pre-build = [
+    "dpkg --add-architecture $CROSS_DEB_ARCH",
+    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
+]
